tests/checker/diagnostics/0245_fun_recursive_branch_mismatch_01.ml.infer.expected
File "0245_fun_recursive_branch_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0245_fun_recursive_branch_mismatch_01 is not a valid module name.

File "0245_fun_recursive_branch_mismatch_01.ml", line 2, characters 22-27:
2 |   if flag then 0 else false
                          ^^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
